scrollbar fix

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -1,6 +1,6 @@
 html, body {
     overflow: hidden;
-    overflow-y: hidden;
+    overflow-y: hidden !important;
 }
 
 .hero {
